--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ django-buttons = "^0.9.2"
 buttons = "^0.1.9"
 chatbot-py = "^2.74"
 wikipedia = "^1.4.0"
+discord-buttons = "^0.3.5"
+oauth = "^1.0.1"
+rsap = "^2.4.2"
+pygame = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 
